fix overflow issue

--- a/data/style.css
+++ b/data/style.css
@@ -42,10 +42,6 @@ headerbar.desktop windowcontrols button:active image {
     border-radius: 9px;
 }
 
-.drawing_tool_entry_box {
-  border-bottom: 1px solid var(--card-shade-color);
-}
-
 /* Gradient Preview Box */
 .gradient-preview {
     border-radius: 8px;
